# Kling

./: .gitignore  .gitmodules  CMakeLists.txt
include/Kling/: Kling.hpp  Phonetics.hpp
include/Kling/Phonetics/: IPA.hpp  Phone.hpp  PhoneBuilder.hpp
src/: CMakeLists.txt  IPA.hpp  Phone.hpp  Phonetics.cpp  Src2.cpp  main.cpp
tests/: CMakeLists.txt  PhoneTests.cpp
